--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand">
-        <img src="/assets/icons/leanTech.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+        <img src="assets/icons/leanTech.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
         Weather App
       </a>
     </div>
