--- a/src/app/modules/dashboard/components/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/components/dashboard/dashboard.component.html
@@ -17,13 +17,13 @@
                 <p class="card-text temp-number">{{ city.temp}}<span class="symbol">°</span></p>
                 <div>
                     <div *ngIf="city.tempC < 19">
-                        <img  src="/assets/icons/coldWeather.svg" alt="" width="30" height="24" class="d-inline-block align-text-top"><span> Cold</span>
+                        <img  src="assets/icons/coldWeather.svg" alt="" width="30" height="24" class="d-inline-block align-text-top"><span> Cold</span>
                     </div>
                     <div *ngIf="city.tempC > 19.1 && city.tempC < 26">
-                        <img src="/assets/icons/warmWeather.svg" alt="" width="30" height="24" class="d-inline-block align-text-top"><span> Warm</span>
+                        <img src="assets/icons/warmWeather.svg" alt="" width="30" height="24" class="d-inline-block align-text-top"><span> Warm</span>
                     </div>
                     <div *ngIf="city.tempC > 26.1">
-                        <img src="/assets/icons/hotWeather.svg" alt="" width="30" height="24" class="d-inline-block align-text-top"><span> Hot</span>
+                        <img src="assets/icons/hotWeather.svg" alt="" width="30" height="24" class="d-inline-block align-text-top"><span> Hot</span>
                     </div>
                 </div>
                 <button type="button" class="btn btn-primary update-btn" (click)="updateClick(city)">Update</button>
