--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -2,12 +2,12 @@
     <ul class="nav nav-pills nav-flush flex-column mb-auto text-center">
       <li class="nav-item">
         <a class="nav-link py-3">
-            <img src="/assets/icons/leanTech.svg" alt="" width="30" height="24" class="d-inline-block align-text-center">
+            <img src="assets/icons/leanTech.svg" alt="" width="30" height="24" class="d-inline-block align-text-center">
         </a>
       </li>
       <li>
         <a class="nav-link py-3">
-            <img src="/assets/icons/dashboard.svg" alt="" width="30" height="24" class="d-inline-block align-text-center">
+            <img src="assets/icons/dashboard.svg" alt="" width="30" height="24" class="d-inline-block align-text-center">
         </a>
       </li>
     </ul>
